// Pluckk Spaced Repetition System - Database Schema
// Visualize at: https://dbdiagram.io
//
// To use: Copy this entire file and paste into dbdiagram.io

Project pluckk_spaced_repetition {
  database_type: 'PostgreSQL'
  Note: '''
    # Pluckk Spaced Repetition Data Model

    This schema supports:
    - Multiple SR algorithms (SM-2, FSRS, custom)
    - Numeric answer cards with calibration training
    - Complete review audit trail
    - User-configurable algorithm parameters
  '''
}

// ============================================================================
// CORE TABLES
// ============================================================================

Table users {
  id uuid [pk, note: 'Links to Supabase auth.users']
  email text [not null]
  stripe_customer_id text
  subscription_status text [default: 'free', note: 'free | active | canceled | past_due']
  cards_generated_this_month integer [default: 0]
  current_period_start timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table cards {
  id uuid [pk]
  user_id uuid [ref: > users.id]

  // Content
  question text [not null]
  answer text [not null]
  style text [note: 'qa | cloze | explanation | application | example_generation']

  // Answer Type Classification
  answer_type text [default: 'text', note: 'text | numeric | numeric_range']

  // Numeric Answer Fields (null for text cards)
  numeric_answer decimal [note: 'Exact answer for numeric type']
  numeric_lower decimal [note: 'Lower bound for numeric_range type']
  numeric_upper decimal [note: 'Upper bound for numeric_range type']
  numeric_unit text [note: 'Display unit: kg, years, $, %, etc.']
  numeric_precision integer [default: 0, note: 'Decimal places']

  // Metadata
  source_url text
  image_url text
  tags text[] [note: 'For topic-based interleaving']
  is_public boolean [default: true]

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    user_id
    answer_type
    (tags) [type: gin]
  }
}

// ============================================================================
// USER SETTINGS
// ============================================================================

Table user_study_settings {
  id uuid [pk]
  user_id uuid [unique, ref: > users.id]

  // Rating System
  rating_system text [default: '4-button', note: '4-button | 3-button | 2-button']

  // Scheduling
  target_retention decimal [default: 0.90, note: '0.70 - 0.99']
  new_cards_per_day integer [default: 20]
  max_reviews_per_day integer [note: 'null = unlimited']

  // Presentation
  interleave_topics boolean [default: true]
  interleave_card_types boolean [default: true]
  show_answer_time boolean [default: false]
  show_next_review_date boolean [default: true]

  // Algorithm
  algorithm_type text [default: 'sm2', note: 'sm2 | fsrs | custom']
  algorithm_config_id uuid [ref: > algorithm_configs.id]

  // Numeric Cards
  confidence_level decimal [default: 0.95, note: '0.50 | 0.80 | 0.90 | 0.95 | 0.99']
  numeric_scoring_mode text [default: 'width_adjusted', note: 'binary | width_adjusted | log_score']

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// ============================================================================
// ALGORITHM CONFIGURATION
// ============================================================================

Table algorithm_configs {
  id uuid [pk]
  user_id uuid [ref: > users.id, note: 'null = system default']
  name text [not null]
  description text
  algorithm_type text [not null, note: 'sm2 | fsrs | custom']
  is_active boolean [default: true]
  is_system_default boolean [default: false]

  // ---- SM-2 Parameters ----
  initial_ease decimal [default: 2.5]
  minimum_ease decimal [default: 1.3]
  ease_bonus_easy decimal [default: 0.15]
  ease_penalty_again decimal [default: 0.20]
  ease_penalty_hard decimal [default: 0.15]
  hard_interval_multiplier decimal [default: 1.2]
  easy_interval_multiplier decimal [default: 1.3]

  // Learning Phase (values in days)
  learning_steps decimal[] [default: '{0.000694, 0.00694, 0.0625}', note: '1min, 10min, 90min']
  graduating_interval decimal [default: 1.0]
  easy_graduating_interval decimal [default: 4.0]

  // Relearning Phase
  relearning_steps decimal[] [default: '{0.00694}', note: '10min']
  minimum_interval_after_lapse decimal [default: 1.0]

  // Lapse Handling
  lapse_ease_penalty decimal [default: 0.20]
  lapse_interval_percentage decimal [default: 0.0]
  leech_threshold integer [default: 8]

  // Global Modifiers
  interval_modifier decimal [default: 1.0]
  max_interval_days integer [default: 365]

  // ---- FSRS Parameters ----
  fsrs_weights decimal[] [note: '17 optimized weights']
  fsrs_desired_retention decimal [default: 0.90]

  // ---- Numeric Card Parameters ----
  numeric_wide_interval_threshold decimal [default: 2.0]
  numeric_tight_interval_threshold decimal [default: 0.3]
  numeric_miss_rating text [default: 'again', note: 'again | hard']

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (algorithm_type, is_system_default)
  }
}

// ============================================================================
// CARD REVIEW STATE (per user, per card)
// ============================================================================

Table card_review_state {
  id uuid [pk]
  card_id uuid [ref: > cards.id]
  user_id uuid [ref: > users.id]

  // Scheduling State
  status text [default: 'new', note: 'new | learning | review | relearning | suspended']
  due_at timestamp [default: `now()`]
  interval_days decimal [default: 0, note: 'Fractional days (0.000694 = 1 min)']
  ease_factor decimal [default: 2.5]

  // FSRS State
  stability decimal [note: 'Time until 90% recall']
  difficulty decimal [note: 'Card difficulty 0-1']

  // Learning Progress
  step_index integer [default: 0]

  // Counters
  review_count integer [default: 0]
  lapse_count integer [default: 0]
  streak integer [default: 0]

  // Calibration (numeric cards)
  numeric_review_count integer [default: 0]
  numeric_hits integer [default: 0]
  calibration_score decimal
  avg_interval_width decimal

  // Flags
  is_leech boolean [default: false]
  is_buried_today boolean [default: false]

  // Timestamps
  last_reviewed_at timestamp
  graduated_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (card_id, user_id) [unique]
    (user_id, status, due_at)
    user_id
    card_id
  }
}

// ============================================================================
// REVIEW LOGS (complete audit trail)
// ============================================================================

Table review_logs {
  id uuid [pk]
  card_review_state_id uuid [ref: > card_review_state.id]
  user_id uuid [ref: > users.id]
  card_id uuid [ref: > cards.id]

  // Review Mode
  review_mode text [not null, default: 'standard', note: 'standard | numeric_interval']

  // ---- Standard Review ----
  rating text [note: 'again | hard | good | easy']
  response_time_ms integer

  // ---- Numeric Review ----
  response_lower decimal [note: 'User lower bound']
  response_upper decimal [note: 'User upper bound']
  correct_answer decimal [note: 'Snapshot of actual answer']
  contained_answer boolean [note: 'Was answer in interval?']
  interval_width decimal [note: 'upper - lower']
  relative_width decimal [note: 'width / |answer|']
  confidence_level_used decimal
  derived_rating text [note: 'Numeric result converted to rating']

  // ---- State Before ----
  previous_status text
  previous_interval decimal
  previous_ease decimal
  previous_due timestamp
  previous_stability decimal
  previous_difficulty decimal

  // ---- State After ----
  new_status text
  new_interval decimal
  new_ease decimal
  new_due timestamp
  new_stability decimal
  new_difficulty decimal

  // ---- Algorithm Metadata ----
  algorithm_version text [note: 'e.g., sm2-v1.0, fsrs-v4.5']
  algorithm_params jsonb [note: 'Snapshot of config used']
  scoring_details jsonb [note: 'Intermediate calculations']

  reviewed_at timestamp [default: `now()`]

  indexes {
    (user_id, reviewed_at)
    (card_id, reviewed_at)
    review_mode
  }
}

// ============================================================================
// STUDY SESSIONS
// ============================================================================

Table study_sessions {
  id uuid [pk]
  user_id uuid [ref: > users.id]

  // Timing
  started_at timestamp [default: `now()`]
  ended_at timestamp

  // Review Counts by Status
  cards_new integer [default: 0]
  cards_learning integer [default: 0]
  cards_review integer [default: 0]
  cards_relearning integer [default: 0]

  // Rating Counts
  again_count integer [default: 0]
  hard_count integer [default: 0]
  good_count integer [default: 0]
  easy_count integer [default: 0]

  // Numeric Stats
  numeric_reviews integer [default: 0]
  numeric_hits integer [default: 0]

  // Time Tracking
  total_time_ms integer [default: 0]
  avg_time_per_card_ms integer

  // Algorithm
  algorithm_config_id uuid [ref: > algorithm_configs.id]
  algorithm_type text

  // Metadata
  platform text [note: 'webapp | extension | mobile']

  created_at timestamp [default: `now()`]

  indexes {
    (user_id, started_at)
  }
}

// ============================================================================
// USER CALIBRATION STATS
// ============================================================================

Table user_calibration_stats {
  id uuid [pk]
  user_id uuid [unique, ref: > users.id]

  // Overall
  total_numeric_reviews integer [default: 0]
  total_hits integer [default: 0]
  overall_hit_rate decimal [note: 'Should approach confidence_level']

  // Breakdown by confidence level
  stats_by_confidence jsonb [default: '{}', note: '{"0.95": {"reviews": 100, "hits": 92}}']

  // Breakdown by magnitude
  stats_by_magnitude jsonb [default: '{}', note: '{"0-10": {"reviews": 30, "hits": 28}}']

  // Breakdown by tag/topic
  stats_by_tag jsonb [default: '{}']

  // Trend over time
  calibration_trend jsonb [default: '[]', note: 'Weekly hit rates']

  updated_at timestamp [default: `now()`]
}

// ============================================================================
// RELATIONSHIPS SUMMARY
// ============================================================================

// users 1--* cards (ownership)
// users 1--1 user_study_settings (preferences)
// users 1--* algorithm_configs (custom configs)
// users 1--* card_review_state (review progress)
// users 1--* review_logs (history)
// users 1--* study_sessions (sessions)
// users 1--1 user_calibration_stats (numeric stats)

// cards 1--* card_review_state (multiple users can review same card)
// cards 1--* review_logs

// card_review_state 1--* review_logs (each review logged)

// algorithm_configs 1--* user_study_settings (selected config)
// algorithm_configs 1--* study_sessions (config used in session)
